<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.PersonalDetailsActivity"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/bg_app_bar"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/personal_details"
            android:textAlignment="textStart"
            android:layout_marginStart="14dp"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

    </LinearLayout>

    <ImageView
            android:id="@+id/service_provider_image_view"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/ic_image"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.036"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.202"
            android:contentDescription="@string/service_logo"/>

    <EditText
            android:id="@+id/service_provider_name_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_shop"
            android:drawablePadding="10dp"
            android:ems="14"
            android:fontFamily="@font/roboto_bold"
            android:hint="@string/name_of_service_provider"
            android:inputType="textPersonName"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorClickableText"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.923"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.231"
            android:autofillHints=""/>

    <EditText
            android:id="@+id/contact_number_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_address"
            android:drawablePadding="10dp"
            android:ems="13"
            android:fontFamily="@font/roboto_bold"
            android:hint="@string/contact_number"
            android:inputType="phone"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorClickableText"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.086"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.33"
            android:autofillHints=""/>

    <EditText
            android:id="@+id/upi_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_rupee"
            android:drawablePadding="10dp"
            android:ems="13"
            android:fontFamily="@font/roboto_bold"
            android:hint="@string/upi_id_for_payments"
            android:inputType="textPersonName"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorClickableText"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.086"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.422"
            android:autofillHints=""/>

    <CheckBox
        android:id="@+id/veg_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/colorPrimaryDark"
        android:drawableEnd="@drawable/vegicon"
        android:drawablePadding="6dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/veg"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.526" />

    <CheckBox
        android:id="@+id/non_veg_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/colorPrimaryDark"
        android:drawableEnd="@drawable/nonvegicon"
        android:drawablePadding="6dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/non_veg"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.526" />

    <CheckBox
        android:id="@+id/lunch_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/colorPrimaryDark"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/lunch"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.602" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/delivery_timings"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.661" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/delivery_timings"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.785" />

    <EditText
            android:id="@+id/editTextTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="4"
            android:fontFamily="@font/roboto_bold"
            android:hint="@string/from"
            android:inputType="time"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:textColorHint="@color/colorClickableText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.461"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.66"
            android:autofillHints=""/>

    <EditText
            android:id="@+id/editTextTime2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="4"
            android:fontFamily="@font/roboto_bold"
            android:hint="@string/to"
            android:inputType="time"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:textColorHint="@color/colorClickableText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.825"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.66" android:autofillHints=""/>

    <CheckBox
            android:id="@+id/dinner_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimaryDark"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/dinner"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.048"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.726" />

    <EditText
            android:id="@+id/editTextTime3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="4"
            android:fontFamily="@font/roboto_bold"
            android:hint="@string/from"
            android:inputType="time"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:textColorHint="@color/colorClickableText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.461"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.787"
            android:autofillHints=""/>

    <EditText
            android:id="@+id/editTextTime4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="4"
            android:fontFamily="@font/roboto_bold"
            android:hint="@string/to"
            android:inputType="time"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:textColorHint="@color/colorClickableText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.825"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.787"
            android:autofillHints=""/>

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:background="@drawable/bg_button_general"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.921" />

    <Button
        android:id="@+id/update_button"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:background="@drawable/bg_button_general"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.921"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>