<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AddServiceActivity"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/bg_app_bar"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/addServiceTabTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textSize="25sp"
            android:layout_weight="7"
            android:layout_marginStart="20dp"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/roboto_bold"/>

        <ImageView
                android:id="@+id/addServiceOptionsMenu"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="2"
                android:visibility="gone"
                android:src="@drawable/ic_settings"
                android:contentDescription="@string/service_settings"/>
    </LinearLayout>

    <EditText
            android:id="@+id/addServiceNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:fontFamily="@font/roboto_bold"
            android:hint="@string/service_name"
            android:inputType="textPersonName"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorClickableText"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.199"
            android:autofillHints=""/>

    <EditText
            android:id="@+id/addServiceDescriptionEditText"
            android:layout_width="313dp"
            android:layout_height="152dp"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/roboto_bold"
            android:gravity="start|top"
            android:hint="@string/description"
            android:textColor="@color/colorText"
            android:inputType="textMultiLine"
            android:textColorHint="@color/colorClickableText"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.332"
            android:autofillHints=""/>

    <EditText
            android:id="@+id/addServicePriceEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="17"
            android:fontFamily="@font/roboto_bold"
            android:hint="@string/price_for_30_days"
            android:inputType="number"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorClickableText"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.518" android:autofillHints=""/>

    <Button
        android:id="@+id/addServiceConfirmButton"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:background="@drawable/bg_button_general"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.904" />

    <Button
        android:id="@+id/addServiceUpdateButton"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:background="@drawable/bg_button_general"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.904"
        android:visibility="gone"/>


    <com.github.siyamed.shapeimageview.mask.PorterShapeImageView
        android:id="@+id/addServiceImageView"
        android:layout_width="292dp"
        android:layout_height="114dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.718"
        app:siShape="@drawable/bg_add_image" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_image"
        android:textSize="18sp"
        android:textColor="@color/colorText"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintBottom_toBottomOf="@+id/addServiceImageView"
        app:layout_constraintEnd_toEndOf="@+id/addServiceImageView"
        app:layout_constraintStart_toStartOf="@+id/addServiceImageView"
        app:layout_constraintTop_toTopOf="@+id/addServiceImageView" />


</androidx.constraintlayout.widget.ConstraintLayout>