<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:layout_margin="10dp"
    app:cardCornerRadius="20dp"
    android:stateListAnimator="@animator/lift_on_touch_card">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="7">

            <TextView
                    android:id="@+id/service_name_textview"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:textSize="16sp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/colorText"
                    android:fontFamily="@font/roboto_bold"/>
            <TextView
                    android:id="@+id/service_active_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/active"
                    android:fontFamily="@font/roboto_bold"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="5dp"
                    android:drawableEnd="@drawable/ic_active"
                    android:textColor="@color/colorSuccess"
                    android:textSize="18sp"
                    android:drawablePadding="5dp"/>
            <TextView
                android:id="@+id/service_not_active_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_active"
                android:fontFamily="@font/roboto_bold"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:drawableEnd="@drawable/ic_not_active"
                android:textColor="@color/colorDanger"
                android:textSize="18sp"
                android:drawablePadding="5dp"
                android:visibility="gone"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="3">
        <TextView
            android:id="@+id/subscribed_user_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:layout_marginEnd="10dp"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:fontFamily="@font/roboto_bold"
            android:layout_marginTop="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/subscribed"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:fontFamily="@font/roboto_bold"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>